test_src/compiler_errors/types/binary/XorBoolError1.b
class XorBoolError1 {
    void test() {
        println(true ^ 1);
    }
}
